Fri Feb  5 12:58:18 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/SharedTransport/SharedTransport.mpc:
        * tests/DCPS/SharedTransport/TestCase.cpp:
        * tests/DCPS/TestFramework/TestFramework.cpp:

	  Fixed compiler warnings/errors for GCC and VC++.

Fri Feb  5 02:18:21 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Fixed bugs that sub_map_ removing elements are not protected
          in a few places.

        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:

          Added flag to indicate if a datalink is in pending releasing.
          When it's in pending release state, the connection reconnect
          task will not try to reconnect. This should fix the failure
          of "Failed to connect" during shutdown.

Thu Feb  4 23:26:55 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/multicast.html:

          Minor edits for correctness.

Thu Feb  4 23:25:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:
        * README:
        * docs/html/multicast/multicast.html:

          Updated documentation for next release.

Thu Feb  4 22:14:41 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Corrected refcounts in find_or_create_datalink for subsequent
          loans of server_link_.

Thu Feb  4 21:27:54 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Messenger/Writer.cpp:

          Reverted changes accidentally introduced in previous commit.

Thu Feb  4 21:08:09 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/CorbaSeq/CorbaSeq.mpc:

          Added a separate mpc project for the code-generation steps,